# avisos

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  avisos.db-shm  avisos.db-wal  controller.Dockerfile  dependency-reduced-pom.xml  docker-compose.dev.yml  docker-compose.yml  hardware-simulator.Dockerfile  node.Dockerfile  pom.xml  sentinel.db
.github/workflows/: docker-pipeline.yml
avisos-common-lib/: pom.xml
avisos-controller-service/: .gitignore  Dockerfile  pom.xml
avisos-fleet-anomaly-detection-service/: app.py  dependencies.py  requirements.txt
avisos-fleet-anomaly-detection-service/api/: fleet.py  infra.py
avisos-fleet-anomaly-detection-service/controller/: fleet.py
avisos-fleet-anomaly-detection-service/entity/: entities.py
avisos-fleet-anomaly-detection-service/model/: models.py
avisos-hardware-simulator/: CMakeLists.txt  Dockerfile
avisos-hardware-simulator/src/: main.cpp
avisos-hardware-simulator/src/controller/: HttpController.cpp  HttpController.h
avisos-hardware-simulator/src/model/: HardwareSnapshot.cpp  HardwareSnapshot.h  NodeMetaData.cpp  NodeMetaData.h
avisos-hardware-simulator/src/service/: FrameProvider.cpp  FrameProvider.h  Simulator.cpp  Simulator.h
avisos-hardware-simulator/src/util/: ArrayBlockingQueue.h
avisos-knowledge/: README.md
avisos-knowledge/staff/: staff.md
avisos-node-service/: .gitignore  pom.xml
docs/: architecture.md  future-directions.md
scripts/: TODO.md  purge-alarms.sh  purge-test-nodes.sh  run-prod.zsh  seed-staff.sh  setup-demo-environment.sh  spawn-test-fleet.sh
(+575 files in other folders)
